# CSE416_Example

./: LICENSE  README.md
backend/: .pre-commit-config.yaml  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 948adc397083_.py  c31c24573ec6_add_quote_table.py
backend/app/apis/: dependencies.py
backend/app/apis/v1/: login.py  quotes.py  users.py
backend/app/core/: database.py  security.py  settings.py
backend/app/models/: __init__.py  base.py  quotes.py  users.py
backend/app/schemas/: login.py  quotes.py  users.py
backend/app/services/login/: auth_user.py
backend/app/services/quotes/: create_quote.py  delete_quote.py  get_quote.py  update_quote.py
backend/app/services/users/: create_user.py  get_user.py  update_user.py
backend/app/tests/: conftest.py  fixtures.py
backend/app/tests/apis/quotes/: test_create_quote_api.py  test_delete_quote_api.py  test_get_quote_api.py  test_update_quote_api.py
backend/app/tests/apis/users/: test_get_my_info_api.py  test_register_user_api.py  test_update_my_info_api.py
backend/app/tests/models/quotes/: test_create_quote.py  test_update_quote.py
backend/app/tests/models/users/: test_create_user.py  test_update_user.py  test_validate_password.py
backend/app/tests/services/quotes/: test_create_new_quote.py  test_delete_existing_quote.py  test_get_quote_by_id.py  test_update_existing_quote.py
backend/app/tests/utils/: test_security.py
backend/app/utils/: security.py
backend/scripts/: downgrade.sh  gen_revision.sh  run.sh
(+5 files in other folders)
