[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "alembic-postgresql-enum>=1.10.0",
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pre-commit>=4.5.1",
    "psycopg>=3.3.3",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.49",
]

